--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       gtag('config', 'G-4Z3XS3PLR3');
     </script>
     
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6430440480434971" crossorigin="anonymous"></script>
+    
     <script src="https://static.elfsight.com/platform/platform.js" data-elfsight-app-lazy async></script>
   </head>
   <body>
